Hero alignement styling fix

--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/03-organisms/hero.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/03-organisms/hero.css
@@ -55,6 +55,7 @@
     padding-bottom: 60px;
     color: var(--theme-color);
 
+    & h1,
     & h2,
     & h3 {
       color: inherit;
@@ -104,20 +105,11 @@
       align-items: center;
       text-align: center;
     }
-
-    .hero__title,
-    .hero__description {
-      text-align: center;
-    }
   }
 
   &--right {
     .hero__content {
       align-items: flex-end;
-    }
-
-    .hero__title,
-    .hero__description {
       text-align: right;
     }
   }
